assignments/assign07-eshopz-cicd/k8s/base/frontend.yaml
# ==============================================================
# FRONTEND DEPLOYMENT
# ==============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chikwex-eshopz
  labels:
    app: frontend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: chikwex-eshopz-sa
      containers:
        - name: frontend
          image: 866934333672.dkr.ecr.us-east-1.amazonaws.com/chikwex-eshopz/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
# ==============================================================
# FRONTEND SERVICE
# ==============================================================
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chikwex-eshopz
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend
